[package]
name = "arb_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.1"
actix-http = "3.3.1"
actix-web = "4.3.1"
anyhow = "1.0.75"
awc = { version = "3.1.1", features = ["rustls"] }
bigdecimal = "0.4.1"
clap = "4.4.0"
fern = "0.6.2"
formatx = "0.2.1"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.187", features = ["serde_derive", "derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.8"
