[package]
name = "arb_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.1"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-web-codegen = "4.2.2"
anyhow = "1.0.75"
bigdecimal = "0.4.1"
clap = { version = "4.4.0", features = ["derive"] }
fern = "0.6.2"
formatx = "0.2.1"
futures-util = "0.3.28"
log = "0.4.20"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.187", features = ["serde_derive", "derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls", "tokio-rustls", "native-tls"] }
tokio-util = "0.7.8"
